--- a/.babelrc
+++ b/.babelrc
@@ -7,5 +7,5 @@
         "modules": false
       }]
     ],
-    "plugins": ["transform-class-properties"]
+    "plugins": ["transform-class-properties", "transform-object-rest-spread"]
   }
