--- a/.babelrc
+++ b/.babelrc
@@ -1,11 +1,4 @@
 {
-    "presets": [
-      ["env", {
-        "targets": {
-          "browsers": ["last 2 versions", "safari >= 7"]
-        },
-        "modules": false
-      }]
-    ],
-    "plugins": ["transform-class-properties", "transform-object-rest-spread"]
-  }
+  "presets": ["@babel/preset-env"],
+  "plugins": ["@babel/plugin-proposal-class-properties"]
+}
